2008-03-25  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Andreas Henriksson <andreas at fatal dot set>

	* gst/nsf/Makefile.am:
	* gst/nsf/dis6502.h:
	* gst/nsf/fds_snd.c:
	* gst/nsf/fds_snd.h:
	* gst/nsf/fmopl.c:
	* gst/nsf/fmopl.h:
	* gst/nsf/gstnsf.c:
	* gst/nsf/log.c:
	* gst/nsf/log.h:
	* gst/nsf/memguard.c:
	* gst/nsf/memguard.h:
	* gst/nsf/mmc5_snd.c:
	* gst/nsf/mmc5_snd.h:
	* gst/nsf/nes6502.c:
	* gst/nsf/nes6502.h:
	* gst/nsf/nes_apu.c:
	* gst/nsf/nes_apu.h:
	* gst/nsf/nsf.c:
	* gst/nsf/nsf.h:
	* gst/nsf/osd.h:
	* gst/nsf/types.h:
	* gst/nsf/vrc7_snd.c:
	* gst/nsf/vrc7_snd.h:
	* gst/nsf/vrcvisnd.c:
	* gst/nsf/vrcvisnd.h:
	Update our internal nosefart to nosefart-2.7-mls to fix segfaults
	on some files. Fixes bug #498237.

	Remove some // comments, fix some compiler warnings and use pow()
	instead of a slow, selfmade implementation.

2008-03-25  Sebastian Dröge  <slomo@circular-chaos.org>

	Patch by: Ed Catmur <ed at catmur dot co dot uk>

	* configure.ac:
	Add support for neon 0.28, which didn't change API. Fixes bug #524035.

2008-03-24  Rene Stadler  <mail@renestadler.de>

	* gst/replaygain/gstrganalysis.c (gst_rg_analysis_init),
	  (gst_rg_analysis_transform_ip):
	* gst/replaygain/gstrglimiter.c (gst_rg_limiter_init),
	  (gst_rg_limiter_transform_ip):
	Make rganalysis and rglimiter elements GAP-flag aware.

	* tests/check/elements/rganalysis.c: (test_gap_buffers),
	  (rganalysis_suite):
	* tests/check/elements/rglimiter.c (test_gap), (rglimiter_suite):
	Add tests to verify gap-awareness.

2008-03-22  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/soup/gstsouphttpsrc.c: (gst_soup_http_src_got_headers_cb),
	(gst_soup_http_src_chunk_allocator),
	(gst_soup_http_src_got_chunk_cb),
	(gst_soup_http_src_uri_get_protocols):
	Don't autoplug souphttpsrc for dav/davs. This is better handled by
	GIO and GnomeVFS as they provide authentication.

	Don't leak the icy caps if we already set them and get a new
	icy-metaint header.
